2008-12-09  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/api/ipmi-lan-session-common.c
	(ipmi_lan_2_0_open_session): Fix Intel 2.0 workarounds.

	* bmc-config/src/bmc-config-user-sections.c (enable_user_commit):
	Fix workaround for enabling a user.
	
2008-12-09  Albert Chu <chu11@llnl.gov>

	* ipmi-oem/: Add supermicro reset-intrusion oem command.  Add
	--list option support.
	
2008-12-09  Albert Chu <chu11@llnl.gov>

	* ipmiconsole/src/libipmiconsole/ipmiconsole_ctx.c,
	ipmiconsole/src/libipmiconsole/ipmiconsole_defs.h,
	ipmiconsole/src/libipmiconsole/ipmiconsole_processing.c
	(_process_protocol_state_activate_payload): Add workaround for
	state machine cycle possibility.
	
2008-12-08  Albert Chu <chu11@llnl.gov>

	* ipmiconsole/src/libipmiconsole/ipmiconsole_packet.c
	(ipmiconsole_ipmi_packet_assemble): Add workaround for Intel IPMI
	2.0 situation.

	* common/man/manpage-common-workaround-sol-only-text.man,
	common/man/manpage-common-workaround-text.man: Change text for
	workaround changes.
	
2008-12-05  Albert Chu <chu11@llnl.gov>

	* ipmiconsole/src/libipmiconsole/ipmiconsole_packet.c
	(ipmiconsole_ipmi_packet_assemble): Fix Intel 2.0 workaround.
	
2008-12-04  Albert Chu <chu11@llnl.gov>

	* common/man/manpage-common-workaround-sol-only-text.man,
	common/man/manpage-common-workaround-text.man: Cleanup text.
	
2008-12-04  Diego "Flameeyes" Petten <flameeyes@gmail.com>

	* ipmi-oem/, ipmi-raw/: Fix portability for glibc 2.8.  Remove use
	of ARG_MAX and replace with sysconf call to _SC_ARG_MAX.
	
2008-12-04  Albert Chu <chu11@llnl.gov>

	* bmc-config/: Add documentation on <username-not-set-yet>.
	
2008-12-04  Dave Love  <fx@gnu.org>

	* freeipmi.spec.in: Require /sbin/chkconfig, not chkconfig, to
	work on SuSE.
	
2008-12-03  Albert Chu <chu11@llnl.gov>

	* bmc-config/src/: Document various issues w/ comments.

	* common/src/configtool/: Support CONFIG_USERNAME_NOT_SET_YET
	config flag.

	* bmc-config/src/: Support CONFIG_USERNAME_NOT_SET_YET in various